--- a/.learn/resets/05-Sidebar-With-Menu/index.html
+++ b/.learn/resets/05-Sidebar-With-Menu/index.html
@@ -9,20 +9,10 @@
 			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
 			crossorigin="anonymous"
 		/>
-		<title>04 Navbar</title>
+		<title>05 Sidebar With Menu</title>
 	</head>
 
 	<body>
-		<ul class="nav">
-			<li class="nav-item">
-				<a class="nav-link active" href="#">Home</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Profile</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">Messages</a>
-			</li>
-		</ul>
+		<!-- your code here, rememeber to wrap everything into a container-fluid -->
 	</body>
 </html>
