--- a/exercises/05-Sidebar-With-Menu/index.html
+++ b/exercises/05-Sidebar-With-Menu/index.html
@@ -14,5 +14,34 @@
 
 	<body>
 		<!-- your code here, rememeber to wrap everything into a container-fluid -->
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-1 mr-1">
+					<ul class="nav flex-column">
+						<li class="nav-item">
+							<a class="nav-link active" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Profile</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Messages</a>
+						</li>
+					</ul>
+				</div>
+				<div class="col-10">
+					<div class="jumbotron">
+						<h1 class="display-4">Hello!</h1>
+						<p class="lead">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam consectetur, magnam, aut fuga debitis dolores praesentium
+							reprehenderit sunt in quia, dicta nesciunt tenetur repellendus adipisci ea pariatur maxime blanditiis eum?
+						</p>
+
+						<a class="btn btn-primary btn-lg" href="#" role="button">Click me!!</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
