--- a/exercises/06-Jumbotron-And-Three-Boxes/index.html
+++ b/exercises/06-Jumbotron-And-Three-Boxes/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<title>06 Jumbotron And 3 Boxes</title>
+	</head>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-	<title>06 Jumbotron And 3 Boxes</title>
-</head>
-
-<body>
-
-</body>
-
+	<body>
+		<div class="container-fluid">
+			<div class="jumbotron">
+				<h1 class="display-4">Hello, world!</h1>
+				<p class="lead">
+					Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore tempora ea debitis facilis repellat corporis, voluptates
+					commodi? Ut exercitationem, ipsam perspiciatis saepe enim facilis non aliquid, dicta, quos impedit illo!
+				</p>
+				<hr class="my-4" />
+				<p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+				<a class="btn btn-primary btn-lg" href="#" role="button">Learn more >></a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="card col-3 border-0 ml-4 mr-5">
+				<h1>Heading</h1>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime veritatis rem neque voluptatibus minus hic ducimus, obcaecati
+					consequuntur laboriosam reiciendis deleniti recusandae, fugiat, asperiores quaerat quas fuga quae illo quia?
+				</p>
+				<a class="btn btn-outline-secondary col-4" href="#" role="button">View details >></a>
+			</div>
+			<div class="card col-3 border-0 ml-4 mr-5">
+				<h1>Heading</h1>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime veritatis rem neque voluptatibus minus hic ducimus, obcaecati
+					consequuntur laboriosam reiciendis deleniti recusandae, fugiat, asperiores quaerat quas fuga quae illo quia?
+				</p>
+				<a class="btn btn-outline-secondary col-4" href="#" role="button">View details >></a>
+			</div>
+			<div class="card col-3 border-0 ml-4 mr-5 ">
+				<h1>Heading</h1>
+				<p>
+					Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime veritatis rem neque voluptatibus minus hic ducimus, obcaecati
+					consequuntur laboriosam reiciendis deleniti recusandae, fugiat, asperiores quaerat quas fuga quae illo quia?
+				</p>
+				<a class="btn btn-outline-secondary col-4" href="#" role="button">View details >></a>
+			</div>
+		</div>
+	</body>
 </html>
