--- a/exercises/07-Buttons-Alert-And-Table/index.html
+++ b/exercises/07-Buttons-Alert-And-Table/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+			crossorigin="anonymous"
+		/>
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+		<title>07 Buttons, Alert, Glyphicon and Table</title>
+	</head>
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-    <title>07 Buttons, Alert, Glyphicon and Table</title>
-</head>
-
-<body>
-
-</body>
-
+	<body>
+		<div class="container">
+			<div class="row">
+				<div class="left col-6">
+					<h1>Is hard to remember all the bootstrap elemets</h1>
+					<p>
+						The rest seems easy because it was very well thought! Don't you agree?
+					</p>
+					<div class="row">
+						<button class="btn btn-success mr-1">Yes</button>
+						<button class="btn btn-danger ml-1">No</button>
+					</div>
+				</div>
+				<div class="right col-6">
+					<div class="alert alert-warning alert-dismissible fade show" role="alert">
+						<p>
+							<i class="fa fa-info-circle" aria-hidden="true"></i> If you don't agree of some of this people may slap you in the face:
+						</p>
+					</div>
+					<table class="table table-striped">
+						<thead>
+							<tr>
+								<th>Firstname</th>
+								<th>Lastname</th>
+								<th>Email</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>John</td>
+								<td>Doe</td>
+								<td>john@example.com</td>
+							</tr>
+							<tr>
+								<td>Mary</td>
+								<td>Moe</td>
+								<td>mary@example.com</td>
+							</tr>
+							<tr>
+								<td>July</td>
+								<td>Dooley</td>
+								<td>july@example.com</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
