--- a/exercises/07-Buttons-Alert-And-Table/index.html
+++ b/exercises/07-Buttons-Alert-And-Table/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="container">
 			<div class="row">
-				<div class="left col-6">
+				<div class="col-6">
 					<h1>Is hard to remember all the bootstrap elemets</h1>
 					<p>
 						The rest seems easy because it was very well thought! Don't you agree?
@@ -26,7 +26,7 @@
 						<button class="btn btn-danger ml-1">No</button>
 					</div>
 				</div>
-				<div class="right col-6">
+				<div class="col-6">
 					<div class="alert alert-warning alert-dismissible fade show" role="alert">
 						<p>
 							<i class="fa fa-info-circle" aria-hidden="true"></i> If you don't agree of some of this people may slap you in the face:
